[package]
name = "hyperliquid"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tokio-rustls = "0.26.0"
futures-util = "0.3"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
ethers = {version = "2.0.14", features = ["eip712", "abigen"]}
dotenv = "0.15"

[dev-dependencies]
mockito = "1.0"
